--- a/docs/main.tex
+++ b/docs/main.tex
@@ -56,9 +56,9 @@
 \begin{itemize}
 	\item магазинах;
 	\item товарах;
-	\item ассортименте товаров в магазинах;
+	\item наличие товаров в магазинах;
 	\item историю цен на товары в магазинах за последние полтора года;
-	\item товарные чеки.
+	\item товарные чеки и позиции товарных чеков.
 \end{itemize}
 
 В таблице 1.1 представлены сущности предметной области и их атрибуты.
@@ -81,7 +81,7 @@
 			
 			\hline
 			
-			Ассортимент товаров & Список товаров \\
+			Наличие & Информация о магазине, информация о товаре \\
 			
 			\hline
 			
@@ -89,7 +89,10 @@
 			
 			\hline
 			
-			Товарный чек & ФИО, дата покупки, информация о месте покупки(магазине), список купленных товаров, итоговая стоимость \\
+			Товарный чек & ФИО, дата покупки, информация о месте покупки(магазине), итоговая стоимость \\
+			\hline
+			
+			Позиция товарного чека & информация о товарном чеке, в котором содержится, и информация о товаре магазина \\
 			\hline
 		\end{tabular}
 	\end{center}
@@ -106,15 +109,16 @@ ER-диаграмма моделируемой области представл
 
 \section{Описание ролевой модели}
 
-Для управления системой введено три роли: пользователь, аналитик, администратор. На рисунке \ref{img:use_case.drawio} представлена Use-case-диаграмма.
+Для управления системой введено три роли: пользователь, аналитик, администратор. На рисунке \ref{img:use_case.drawio} представлена диаграмма вариантов использования.
 
 \includeimage
 	{use_case.drawio}
 	{f}
 	{H}
-	{0.8\textwidth}
-	{Use-case-диаграмма}
+	{0.9\textwidth}
+	{Диаграмма вариантов использования}
 
+В таблице 1.2 представлены роли и их функционал.
 
 \begin{table}[H]
 	\caption{Роли и описание их функционала}
@@ -543,6 +547,47 @@ ER-диаграмма моделируемой области представл
 	{0.9\textwidth}
 	{Диаграмма взаимодействия компонентов ПО}
 
+Описание компонентов:
+
+\begin{itemize}
+	\item компонент \textbf{БД} представляет саму базу данных;
+	
+	\item компонент \textbf{Контекст данных} обеспечивает приложению подключение к базе данных;
+	
+	\item компонент \textbf{Репозиторий отношений наличия} является интерфейсом для работы с таблицей \textbf{Availability};
+	
+	\item компонент \textbf{Репозиторий магазинов} является интерфейсом для работы с таблицей \textbf{Shops};
+	
+	\item компонент \textbf{Репозиторий товаров} является интерфейсом для работы с таблицей \textbf{Products};
+	
+	\item компонент \textbf{Репозиторий товарных чеков} является интерфейсом для работы с таблицей \textbf{SaleReceipts};
+	
+	\item компонент \textbf{Репозиторий позиций товарных чеков} является интерфейсом для работы с таблицей \textbf{SaleReceiptPositions};
+	
+	\item компонент \textbf{Репозиторий цен} является интерфейсом для работы с таблицей \textbf{Costs};
+	
+	\item компонент \textbf{Репозиторий истории цен} является интерфейсом для работы с таблицей \textbf{CostStory};
+	
+	\item компонент \textbf{Модель представления магазинов} поддерживает актуальность данных о магазинах в представлении в соответствии с состоянием репозитория магазинов;
+	
+	\item компонент \textbf{Модель представления товаров} поддерживает актуальность данных о товарах в выбранном магазине в представлении в соответствии с состояниями репозиториев товаров, отношений наличия и цен;
+	
+	\item компонент \textbf{Модель представления товарных чеков} поддерживает актуальность данных о товарных чеках и их позиций в выбранном магазине  в представлении в соответствии с состояниями репозиториев товарных чеков, отношений наличия и позиций товарных чеков;
+	
+	\item компонент \textbf{Модель представления историй цен} поддерживает актуальность данных о истории цен и линии тренда цен выбранного товара в выбранном магазине в соответствии с состояниями репозиториев отношений наличия и историй цен;
+	
+	\item \textbf{Компонент построения линии тренда} обеспечивает построение линии тренда цены для выбранного товара в выбранном магазине;
+	
+	\item компонент \textbf{Представление магазинов} отображает данные из модели представления магазинов в удобном для пользователя виде;
+	
+	\item компонент \textbf{Представление товаров} отображает данные из модели представления товаров в удобном для пользователя виде;
+	
+	\item компонент \textbf{Представление товарных чеков} отображает данные из модели представления товарных чеков в удобном для пользователя виде;
+	
+	\item компонент \textbf{Представление историй цен} отображает данные из модели представления историй цен в удобном для пользователя виде.
+\end{itemize}
+
+
 \section{Разработка системы безопасности БД}
 
 В соответствии с описанной в Аналитическом разделе ролевой моделью, были созданы три пользователя с различными уровнями доступа к данным в БД.
@@ -555,7 +600,7 @@ ER-диаграмма моделируемой области представл
 
 Как было сказано в Аналитическом разделе, для доступа к ролям <<Аналитик>> и <<Администратор>> требуется аутентификация (ввод пароля).
 
-Для каждой роли пароли хранятся в базе данных ролей. Аутентификация происходит при подключении к БД, сравнивая пароль из БД и пароль, указанный в строке подключения к БД.
+Для каждой роли пароли хранятся в таблице паролей в открытом виде. Аутентификация происходит при подключении к БД, сравнивая пароль из БД и пароль, указанный в строке подключения к БД.
 
 ""\newline
 \noindent\textbf{Вывод к конструкторскому разделу}
@@ -710,257 +755,87 @@ ER-диаграмма моделируемой области представл
 ""\newline
 \noindent\textbf{Описание эксперимента}
 
-В данном эксперименте были выбраны три товара с указанными в таблицах 4.1-4.3 историями цен. Далее при расчете очередного значения стоимости товара на следующий месяц при неполной выборке истории цен объем выборки будет ограничиваться от 1 до $N = 18$, где $N$ -- объем полной выборки.
+В данном эксперименте были выбраны три товара с указанными в таблице 4.1 историями цен. Далее при расчете очередного значения стоимости товара на следующий месяц при неполной выборке истории цен объем выборки будет ограничиваться от $N_{min} = 2$ до $N_{max} = 10$, где $N_{min}$ -- минимальный объем выборки, $N_{max}$ -- максимальный объем выборки.
 	
 \begin{table}[H]
-	\caption{История цен первого выбранного для эксперимента товара}
+	\caption{История цен выбранных для эксперимента товаров}
 	\begin{center}
-		\begin{tabular}{| c | c | c |} 
+		\begin{tabular}{| c | c | c | c | c |}
 			\hline
 			
-			\textbf{Год} & \textbf{Месяц} & \textbf{Цена} \\  
-			
-			\hline
-			
-			2021 & 1 & 5155 \\
+			\textbf{Год} & \textbf{Месяц} & \textbf{Цена I, руб.} & \textbf{Цена II, руб.} & \textbf{Цена III, руб.} \\  
 			
 			\hline
 			
-			2021 & 2 & 5155 \\
+			2021 & 1 & 5155 & 18299 & 69990 \\
 			
 			\hline
 			
-			2021 & 3 & 5155 \\
+			2021 & 2 & 5155 & 17599 & 69990  \\
 			
 			\hline
 			
-			2021 & 4 & 5155 \\
+			2021 & 3 & 5155 & 16399 & 69990  \\
 			
 			\hline
 			
-			2021 & 5 & 5155 \\
+			2021 & 4 & 5155 & 18090 & 69990  \\
 			
 			\hline
 			
-			2021 & 6 & 5690 \\
+			2021 & 5 & 5155 & 18090 & 52990  \\
 			
 			\hline
 			
-			2021 & 7 & 5815 \\
+			2021 & 6 & 5690 & 18090 & 59990  \\
 			
 			\hline
 			
-			2021 & 8 & 5399 \\
+			2021 & 7 & 5815 & 19590 & 64990  \\
 			
 			\hline
 			
-			2021 & 9 & 5226 \\
+			2021 & 8 & 5399 & 17999 & 62990  \\
 			
 			\hline
 			
-			2021 & 10 & 5055 \\
+			2021 & 9 & 5226 & 18299 & 59990  \\
 			
 			\hline
 			
-			2021 & 11 & 5384 \\
+			2021 & 10 & 5055 & 18699 & 69990  \\
 			
 			\hline
 			
-			2021 & 12 & 5444 \\
+			2021 & 11 & 5384 & 19999 &  61990  \\
 			
 			\hline
 			
-			2022 & 1 & 4940 \\
+			2021 & 12 & 5444 & 27790 & 61990  \\
 			
 			\hline
 			
-			2022 & 2 & 4990 \\
+			2022 & 1 & 4940 & 31599 & 61990  \\
 			
 			\hline
 			
-			2022 & 3 & 4990 \\
+			2022 & 2 & 4990 & 29799 & 61990  \\
 			
 			\hline
 			
-			2022 & 4 & 4990 \\
+			2022 & 3 & 4990 & 34299 & 61990  \\
 			
 			\hline
 			
-			2022 & 5 & 4990 \\
+			2022 & 4 & 4990 & 24990 & 61990  \\
 			
 			\hline
 			
-			2022 & 6 & 4990 \\
-			
-			\hline
-		\end{tabular}
-	\end{center}
-\end{table}
-
-\begin{table}[H]
-	\caption{История цен второго выбранного для эксперимента товара}
-	\begin{center}
-		\begin{tabular}{| c | c | c |} 
-			\hline
-			
-			\textbf{Год} & \textbf{Месяц} & \textbf{Цена} \\  
+			2022 & 5 & 4990 & 29390 & 61990  \\
 			
 			\hline
 			
-			2021 & 1 & 18299 \\
-			
-			\hline
-			
-			2021 & 2 & 17599 \\
-			
-			\hline
-			
-			2021 & 3 & 16399 \\
-			
-			\hline
-			
-			2021 & 4 & 18090 \\
-			
-			\hline
-			
-			2021 & 5 & 18090 \\
-			
-			\hline
-			
-			2021 & 6 & 18090 \\
-			
-			\hline
-			
-			2021 & 7 & 19590 \\
-			
-			\hline
-			
-			2021 & 8 & 17999 \\
-			
-			\hline
-			
-			2021 & 9 & 18299 \\
-			
-			\hline
-			
-			2021 & 10 & 18699 \\
-			
-			\hline
-			
-			2021 & 11 & 19999 \\
-			
-			\hline
-			
-			2021 & 12 & 27790 \\
-			
-			\hline
-			
-			2022 & 1 & 31599 \\
-			
-			\hline
-			
-			2022 & 2 & 29799 \\
-			
-			\hline
-			
-			2022 & 3 & 34299 \\
-			
-			\hline
-			
-			2022 & 4 & 24990 \\
-			
-			\hline
-			
-			2022 & 5 & 29390 \\
-			
-			\hline
-			
-			2022 & 6 & 28399 \\
-			
-			\hline
-		\end{tabular}
-	\end{center}
-\end{table}
-
-\begin{table}[H]
-	\caption{История цен третьего выбранного для эксперимента товара}
-	\begin{center}
-		\begin{tabular}{| c | c | c |} 
-			\hline
-			
-			\textbf{Год} & \textbf{Месяц} & \textbf{Цена} \\  
-			
-			\hline
-			
-			2021 & 1 & 69990 \\
-			
-			\hline
-			
-			2021 & 2 & 69990 \\
-			
-			\hline
-			
-			2021 & 3 & 69990 \\
-			
-			\hline
-			
-			2021 & 4 & 64990 \\
-			
-			\hline
-			
-			2021 & 5 & 52990 \\
-			
-			\hline
-			
-			2021 & 6 & 59990 \\
-			
-			\hline
-			
-			2021 & 7 & 64990 \\
-			
-			\hline
-			
-			2021 & 8 & 62990 \\
-			
-			\hline
-			
-			2021 & 9 & 67990 \\
-			
-			\hline
-			
-			2021 & 10 & 59990 \\
-			
-			\hline
-			
-			2021 & 11 & 69990 \\
-			
-			\hline
-			
-			2021 & 12 & 61990 \\
-			
-			\hline
-			
-			2022 & 1 & 61990 \\
-			
-			\hline
-			
-			2022 & 2 & 61990 \\
-			
-			\hline
-			
-			2022 & 3 & 61990 \\
-			
-			\hline
-			
-			2022 & 4 & 61990 \\
-			
-			\hline
-			
-			2022 & 5 & 61990 \\
-			
-			\hline
-			
-			2022 & 6 & 61990 \\
+			2022 & 6 & 4990 & 28399 & 61990  \\
 			
 			\hline
 		\end{tabular}
@@ -969,13 +844,16 @@ ER-диаграмма моделируемой области представл
 
 \section{Результаты экперимента}
 
-В результате эксперимента были получены значения, представленные в таблицах 4.4-4.6, где
+В результате эксперимента были получены значения, представленные в таблицах 4.2-4.4, где
 
 \begin{itemize}
+	\item $N$ -- объем всей выборки;
 	\item n -- количество используемых значений для вычисления стоимости товара на следующий месяц;
 	\item $\hat{y}$ -- аппроксимированное значение стоимости товара на следующий месяц;
 	\item $y$ -- реальное значение стоимости товара на следующий месяц;
-	\item $\frac{|\hat{y} - y|}{y}$ -- среднее значение относительной погрешности.
+	\item $\delta_{min} = inf(\frac{|\hat{y}_i - y_i|}{y_i})$ -- минимальное значение относительной погрешности;
+	\item $\delta_{max} = sup(\frac{|\hat{y}_i - y_i|}{y_i})$ -- максимальное значение относительной погрешности;
+	\item $\bar{\delta} = \frac{1}{N - N_{max} + 1} \displaystyle\sum_{i = 1}^{N - N_{max} + 1} \frac{|\hat{y}_i - y_i|}{y_i}$ -- среднее значение относительной погрешности.
 \end{itemize}
 
 \begin{table}[H]
@@ -984,42 +862,26 @@ ER-диаграмма моделируемой области представл
 		\begin{tabular}{| c | c | c | c |} 
 			\hline
 			
-			\textbf{n = 1..N} & \textbf{$\hat{y}$} & \textbf{$y$} & \textbf{$\frac{|\hat{y} - y|}{y}$, \%} \\  
+			\textbf{n = $N_{min}$..$N_{max}$} & \textbf{$\delta_{min} \cdot 100$, \%} & \textbf{$\delta_{max} \cdot 100$, \%} & \textbf{$\bar{\delta} \cdot 100$, \%} \\  
 			
 			\hline
-			1 & 5155 & 5155 & 0\\
+			2 & 0,000 & 11,417 & 4,194\\
 			\hline
-			2 & 5155 & 5155 & 0\\
+			3 & 0,000 & 22,405 & 8,185\\
 			\hline
-			3 & 5155 & 5155 & 0\\
+			4 & 0,000 & 34,509 & 10,839\\
 			\hline
-			4 & 5155 & 5155 & 0\\
+			5 & 0,401 & 35,916 & 11,751\\
 			\hline
-			5 & 5155 & 5690 & 9,402\\
+			6 & 4,850 & 47,144 & 16,977\\
 			\hline
-			6 & 5435 & 5815 & 6,534\\
+			7 & 2,714 & 28,695 & 14,363\\
 			\hline
-			7 & 5652 & 5399 & 4,686\\
+			8 & 3,405 & 41,722 & 14,889\\
 			\hline
-			8 & 5642 & 5226 & 7,960\\
+			9 & 3,294 & 33,169 & 14,470\\
 			\hline
-			9 & 5406 & 5055 & 6,943\\
-			\hline
-			10 & 5167 & 5384 & 4,030\\
-			\hline
-			11 & 5162 & 5444 & 5,180\\
-			\hline
-			12 & 5318 & 4940 & 7,651\\
-			\hline
-			13 & 5107 & 4990 & 2,344\\
-			\hline
-			14 & 4945 & 4990 & 0,901\\
-			\hline
-			15 & 4945 & 4990 & 0,901\\
-			\hline
-			16 & 4960 & 4990 & 0,601\\
-			\hline
-			17 & 4970 & 4990 & 0,400\\
+			10 & 6,456 & 35,667 & 11,629\\
 			\hline
 		\end{tabular}
 	\end{center}
@@ -1031,42 +893,26 @@ ER-диаграмма моделируемой области представл
 		\begin{tabular}{| c | c | c | c |} 
 			\hline
 			
-			\textbf{n = 1..N} & \textbf{$\hat{y}$} & \textbf{$y$} & \textbf{$\frac{|\hat{y} - y|}{y}$, \%} \\  
+			\textbf{n = $N_{min}$..$N_{max}$} & \textbf{$\delta_{min} \cdot 100$, \%} & \textbf{$\delta_{max} \cdot 100$, \%} & \textbf{$\bar{\delta} \cdot 100$, \%} \\   
 			
 			\hline
-			1 & 18299 & 17599 & 3,977\\
+			2 & 4,500 & 55,258 & 22,060\\
 			\hline
-			2 & 17599 & 16399 & 7,317\\
+			3 & 1,093 & 93,630 & 37,250\\
 			\hline
-			3 & 16482 & 18090 & 8,888\\
+			4 & 2,716 & 164,154 & 60,627\\
 			\hline
-			4 & 17920 & 18090 & 0,939\\
+			5 & 10,708 & 331,860 & 84,553\\
 			\hline
-			5 & 18323 & 18090 & 1,288\\
+			6 & 0,288 & 611,851 & 90,550\\
 			\hline
-			6 & 18406 & 19590 & 6,043\\
+			7 & 5,877 & 234,433 & 45,040\\
 			\hline
-			7 & 19534 & 17999 & 8,528\\
+			8 & 3,808 & 83,716 & 30,007\\
 			\hline
-			8 & 18212 & 18299 & 0,475\\
+			9 & 6,125 & 87,676 & 34,671\\
 			\hline
-			9 & 18163 & 18699 & 2,866\\
-			\hline
-			10 & 18645 & 19999 & 6,770\\
-			\hline
-			11 & 20011 & 27790 & 27,992\\
-			\hline
-			12 & 27319 & 31599 & 13,544\\
-			\hline
-			13 & 32532 & 29799 & 9,171\\
-			\hline
-			14 & 30449 & 34299 & 11,224\\
-			\hline
-			15 & 33509 & 24990 & 34,089\\
-			\hline
-			16 & 25207 & 29390 & 14,232\\
-			\hline
-			17 & 28247 & 28399 & 0,5352\\
+			10 & 0,732 & 85,850 & 35,511\\
 			\hline
 		\end{tabular}
 	\end{center}
@@ -1078,42 +924,26 @@ ER-диаграмма моделируемой области представл
 		\begin{tabular}{| c | c | c | c |} 
 			\hline
 			
-			\textbf{n = 1..N} & \textbf{$\hat{y}$} & \textbf{$y$} & \textbf{$\frac{|\hat{y} - y|}{y}$, \%} \\  
+			\textbf{n = $N_{min}$..$N_{max}$} & \textbf{$\delta_{min} \cdot 100$, \%} & \textbf{$\delta_{max} \cdot 100$, \%} & \textbf{$\bar{\delta} \cdot 100$, \%} \\   
 			
 			\hline
-			1 & 69990 & 69990 & 0\\
+			2 & 0,000 & 29,037 & 7,518\\
 			\hline
-			2 & 69990 & 69990 & 0\\
+			3 & 0,000 & 58,074 & 16,990\\
 			\hline
-			3 & 69990 & 64990 & 7,693\\
+			4 & 0,000 & 108,082 & 33,997\\
 			\hline
-			4 & 66490 & 52990 & 25,476\\
+			5 & 0,000 & 208,098 & 62,212\\
 			\hline
-			5 & 57790 & 59990 & 3,667\\
+			6 & 0,000 & 398,451 & 91,006\\
 			\hline
-			6 & 56311 & 64990 & 13,354\\
+			7 & 0,922 & 725,956 & 113,923\\
 			\hline
-			7 & 61870 & 62990 & 1,778\\
+			8 & 0,691 & 276,254 & 76,690\\
 			\hline
-			8 & 65414 & 67990 & 3,788\\
+			9 & 0,999 & 113,638 & 32,501\\
 			\hline
-			9 & 67284 & 59990 & 12,158\\
-			\hline
-			10 & 60009 & 69990 & 14,260\\
-			\hline
-			11 & 69993 & 61990 & 12,910\\
-			\hline
-			12 & 62889 & 61990 & 1,450\\
-			\hline
-			13 & 61792 & 61990 & 0,319\\
-			\hline
-			14 & 61888 & 61990 & 0,164\\
-			\hline
-			15 & 61964 & 61990 & 0,041\\
-			\hline
-			16 & 61851 & 61990 & 0,224\\
-			\hline
-			17 & 61625 & 61990 & 0,588\\
+			10 & 0,538 & 159,434 & 46,382\\
 			\hline
 		\end{tabular}
 	\end{center}
@@ -1125,7 +955,7 @@ ER-диаграмма моделируемой области представл
 {Errors}
 {f}
 {H}
-{0.9\textwidth}
+{1.08\textwidth}
 {Графическое представление результатов эксперимента}
 
 ""\newline
@@ -1133,9 +963,9 @@ ER-диаграмма моделируемой области представл
 
 В данном разделе был поставлен эксперимент по оценке отклонения значения стоимости товара на следующий месяц при неполной выборке истории цен от реального значения стоимости товара на следующий месяц.
 
-Из результатов эксперимента видно, что пока цена не подвержена каким-то аномально резким изменениям -- модель можно использовать. В таком случае ошибка не превышает 15\%, а иногда и 5\%, что говорит о удовлетворимом качестве модели прогнозирования. 
+Из результатов эксперимента видно, что чем больше объем выборки, тем меньше средняя погрешность. Также это влияет и на размах погрешности, уменьшая ее с ростом объема выборки. 
 
-В противном случае, когда существуют аномальные изменения цены, ошибка превышает 15\%, что говорит о ненадёжности модели прогнозирования в таких условиях.
+Стоит также учесть, что для второго и третьего товаров характерны резкие перепады цен, что видно по размахам отклонений и их средним значениям. Для первого же товара такое не характерно, что объясняет его значения среднего отклонения, находящиеся около 15\%. 
 
 Из этого можно сделать вывод, что данная модель подходит для прогноза цен с минимальными колебаниями.
 
@@ -1149,7 +979,7 @@ ER-диаграмма моделируемой области представл
 
 Также был поставлен эксперимент, в ходе которого были выявлены условия использования реализованной модели для предсказания стоимости товара.
 
-В качестве развития проекта можно предложить реализацию более устойчивых моделей для прогнозирования стоимостей товаров на следующий месяц для лучшей аппроксимации цены на товар в магазине. 
+В качестве развития проекта можно предложить реализацию более качественных и устойчивых моделей для прогнозирования стоимостей товаров на следующий месяц для лучшей аппроксимации цены на товар в магазине. 
 
 \makebibliography
 
