--- a/docs/main.tex
+++ b/docs/main.tex
@@ -55,7 +55,7 @@
 
 \begin{itemize}
 	\item магазинах;
-	\item товарах;
+	\item продуктах;
 	\item наличие товаров в магазинах;
 	\item историю цен на товары в магазинах за последние полтора года;
 	\item товарные чеки и позиции товарных чеков.
@@ -66,7 +66,7 @@
 \begin{table}[H]
 	\caption{Сущности и их атрибуты}
 	\begin{center}
-		\begin{tabular}{| l | p{11 cm} |} 
+		\begin{tabular}{| l | p{10 cm} |} 
 			\hline
 			
 			\textbf{Сущность} & \textbf{Атрибуты} \\  
@@ -77,11 +77,7 @@
 			
 			\hline
 			
-			Товар & Название, тип товара, актуальная цена \\
-			
-			\hline
-			
-			Наличие & Информация о магазине, информация о товаре \\
+			Продукт & Название, тип товара, актуальная цена \\
 			
 			\hline
 			
@@ -180,7 +176,7 @@ ER-диаграмма моделируемой области представл
 \end{itemize}
 
 
-""\newline
+%""\newline
 \noindent\textbf{Дореляционные СУБД}
 
 К ним относятся иерархические и сетевые СУБД.
@@ -955,7 +951,7 @@ ER-диаграмма моделируемой области представл
 {Errors}
 {f}
 {H}
-{1.08\textwidth}
+{\textwidth}
 {Графическое представление результатов эксперимента}
 
 ""\newline
