--- a/docs/main.tex
+++ b/docs/main.tex
@@ -176,7 +176,7 @@ ER-диаграмма моделируемой области представл
 \end{itemize}
 
 
-%""\newline
+\newpage
 \noindent\textbf{Дореляционные СУБД}
 
 К ним относятся иерархические и сетевые СУБД.
